# gdguess-redux

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yaml
docker/: Dockerfile
docs/: AUGMENTATIONS.md  CALIBRATION.md  CHANGELOG.md  CONFIG.md  DATASET.md  DATA_PIPELINE.md  DECISIONS.md  DISTILLATION.md  DOCS_POLICY.md  EVAL.md  FUSION.md  INDEX.md  INFERENCE.md  LOSS.md  MANIFEST_SPEC.md  MODEL.md  OOD.md  RETRIEVAL.md  SERVING.md  STREAMING.md  TRAINING.md  UNSUPERVISED_DOMAINS.md
scripts/: check_docs_changed.py
src/augment/: device_color.py  mixstyle.py  noise_bank.py  room_ir.py  spec_augment.py
src/data/: audio_std.py  build_manifest.py  chunk_windows.py  dataset.py  sampler.py
src/domain/: adversary.py  cluster_domains.py
src/index/: build_prototypes.py  faiss_index.py
src/infer/: calibration.py  early_exit.py  ood.py  posterior.py  streaming.py
src/model/encoders/: openbeats_large.py
src/model/heads/: arcface.py  aux.py  classifier.py  supcon.py
src/serve/: api.py  cli.py
src/train/: callbacks.py  train.py
tests/: conftest.py  test_api_contract.py  test_augment.py  test_calibration.py  test_manifest.py  test_model_heads.py  test_posterior.py  test_prototypes.py  test_sampler.py  test_windowing.py
